@@ -6,13 +6,13 @@
     <modelVersion>4.0.0</modelVersion>
     <properties>
         <assert4j.version>3.23.1</assert4j.version>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <lombok.version>1.18.24</lombok.version>
-        <postgre.sql.version>42.5.1</postgre.sql.version>
+        <lombok.version>1.18.26</lombok.version>
+        <postgre.sql.version>42.5.4</postgre.sql.version>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
-        <record.builder.version>34</record.builder.version>
+        <record.builder.version>35</record.builder.version>
     </properties>
     <parent>
         <groupId>io.helidon.applications</groupId>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.14.0</version>
+            <version>2.14.2</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
@@ -175,8 +175,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
+                    <enablePreview>true</enablePreview>
                     <source>19</source>
                     <target>19</target>
                     <verbose>true</verbose>
@@ -210,6 +211,9 @@
                         <id>jlink-image</id>
                         <configuration>
                             <addClassDataSharingArchive>false</addClassDataSharingArchive>
+                            <defaultJvmOptions>
+                                --enable-preview
+                            </defaultJvmOptions>
                         </configuration>
                     </execution>
                 </executions>
